init db no fail padding